# Protocol_Omni

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Palit.RTX5090.32768.250114.rom  README.md  STRUCTURE.md  pyproject.toml  pytest.ini
.clinerules/: agent-context.md
.github/ISSUE_TEMPLATE/: blocker.yml  config.yml  enhancement.yml  investigation.yml
.serena/: project.yml
.serena/memories/: code_style.md  infrastructure.md  operation_speed_demon_v16_3_2.md  project_overview.md  sentinel_audit_v16_3_2.md  sentinel_audit_v16_3_6.md  suggested_commands.md  task_completion.md
benchmarks/: README.md  benchmark-sweep.sh
config/: agent_stack.yaml  gepa-local.yaml  gepa.yaml  mcp-allowlist.yaml
docker/: Dockerfile.blackwell  Dockerfile.host  Dockerfile.ktransformers-lazarus  Dockerfile.mem0  Dockerfile.trt-sandbox  README.md  agent-framework.yaml  datasources.yaml  deepseek-r1-eagle.yaml  env.example  kimi-k2-oracle.yaml  memory-stack.yaml  minimax-failsafe.yaml  observability-stack.yaml  omni-stack.yaml  phoenix-sidecar.yaml  prometheus.yml  server_mem0.py
docs/: README.md  roadmap_phase_4_5.md
k8s/: README.md  network-policy.yaml  prometheus-alerts.yaml  zone-a-inference.yaml  zone-b-agents.yaml
prompts/: letta-retrieval.txt
scripts/: benchmark_dragrace.py  build-metal-container.sh  check_gpu.sh  compare-benchmarks.sh  delete_keys.sh  disable_sb.sh  gpu_oc_extreme.sh  index_code.py  memgraph-schema.cypher  run-benchmark.sh  stress_test_ai.sh  stress_test_extreme.sh  tune-ai-inference.sh  verify-ai-tuning.sh
src/: README.md
tests/: __init__.py  conftest.py
(+304 files in other folders)
